deployments/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: chatbot.lab.univ.ac.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-svc
                port: { number: 80 }
